[tool.poetry]
name = "thundra"
version = "0.1.0"
description = "Neonize Abstraction"
authors = ["krypton-byte <rosid6434@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neonize = "^0.0.9"
pytube = "^15.0.0"
langchain = "^0.1.11"
tomli-w = "^1.0.0"
langchain-openai = "^0.0.8"
shazamio = "^0.5.1"
graphviz = "^0.20.1"
tortoise-orm = "^0.20.0"
appdirs = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
thundra = "thundra.cli:main"
