[tool.poetry]
name = "thundra-ai"
version = "0.1.0"
description = "Neonize Abstraction"
authors = ["krypton-byte <rosid6434@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include="thundra"}]
include=[
    "assets/logo.jpg"
]
homepage = "https://github.com/krypton-byte/thundra"
repository = "https://github.com/krypton-byte/thundra.git"
keywords = ["neonize", "whatsapp", "framework", "websocket", "bot"]


[tool.poetry.dependencies]
python = "^3.11"
neonize = "^0.0.9"
pytube = "^15.0.0"
langchain = "^0.1.11"
tomli-w = "^1.0.0"
langchain-openai = "^0.0.8"
graphviz = "^0.20.1"
appdirs = "^1.4.4"
watchfiles = "^0.21.0"
beartype = "^0.17.2"


[[tool.poetry.source]]
name = "thundra-ai"
url = "https://github.com/krypton-byte/thundra"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
thundra = "thundra.cli:main"
