[tool.poetry]
name = "thundra-ai"
version = "0.1.0"
description = "Neonize Abstraction"
authors = ["krypton-byte <rosid6434@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include="thundra"}]
include=[
    "assets/logo.jpg"
]
homepage = "https://github.com/krypton-byte/thundra"
repository = "https://github.com/krypton-byte/thundra.git"
keywords = ["neonize", "whatsapp", "framework", "websocket", "bot"]


[tool.poetry.dependencies]
python = "^3.11"
neonize = "^0.1.6"
pytube = "^15.0.0"
langchain = "^0.1.11"
tomli-w = "^1.0.0"
langchain-openai = "^0.0.8"
graphviz = "^0.20.1"
appdirs = "^1.4.4"
cachetools = "^5.3.3"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.22.0"



[tool.poetry.group.docs.dependencies]
sphinx-autodoc-typehints = "^2.1.1"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
furo = "^2024.5.6"

[[tool.poetry.source]]
name = "thundra-ai"
url = "https://github.com/krypton-byte/thundra"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
thundra = "thundra.cli:main"